# mailserver-operators

./: .gitignore  .licenserc.yaml  .vale.ini  .valeignore  README.md  pyproject.toml  tox.toml
.github/workflows/: integration_test.yaml  promote_charm.yaml  publish_charm.yaml  publish_snap.yaml  test.yaml
.opencode/plans/: pr3-tls-review-fixes.md
142/: index.html
142/export/: influxDbData.txt
142/history/: categories-trend.json  duration-trend.json  history-trend.json  retry-trend.json
142/widgets/: executors.json
17/: index.html
17/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
17/export/: influxDbData.txt  prometheusData.txt
17/history/: categories-trend.json  duration-trend.json  history-trend.json
17/widgets/: executors.json  retry-trend.json  severity.json  summary.json
182/: index.html
182/export/: influxDbData.txt
182/history/: categories-trend.json  duration-trend.json
182/widgets/: executors.json  history-trend.json  retry-trend.json
266/: index.html
266/export/: influxDbData.txt
266/history/: history-trend.json  history.json
266/widgets/: categories-trend.json  duration-trend.json  executors.json  retry-trend.json
297/: index.html
297/export/: influxDbData.txt
297/history/: retry-trend.json
297/widgets/: categories-trend.json  duration-trend.json  executors.json  history-trend.json
324/: index.html
324/export/: influxDbData.txt
324/history/: duration-trend.json  history-trend.json  retry-trend.json
324/widgets/: categories-trend.json  executors.json
80/: index.html
80/export/: influxDbData.txt
80/history/: categories-trend.json  duration-trend.json
80/widgets/: executors.json  history-trend.json  retry-trend.json
charms/dovecot-charm/: charmcraft.yaml  conftest.py  pyproject.toml
deployment/terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf  versions.tf
docs/explanation/: charm-state-diagrams.md  dovecot-charm-state-diagrams.rst  index.rst
docs/release-notes/: index.rst  release-notes-0001.rst  release-notes-0002.rst  release-notes-0003.rst  release-notes-0004.rst  release-notes-0005.rst  release-notes-0006.rst  release-notes-0007.rst  release-notes-0008.rst
dovecot-charm/: charmcraft.yaml  conftest.py  pyproject.toml  tox.toml
dovecot-charm/docs/: charm-state-diagrams.md
dovecot-charm/src/: charm.py  constants.py  dovecot_config.py  dovecot_setup.py  exceptions.py  ha.py  storage.py  tools.py  utils.py
dovecot-charm/src/charms/grafana_agent/v0/: cos_agent.py
dovecot-charm/src/charms/operator_libs_linux/v0/: apt.py
dovecot-charm/src/charms/tls_certificates_interface/v4/: tls_certificates.py
dovecot-charm/src/grafana_dashboards/: dovecot.json
dovecot-charm/src/loki_alert_rules/: mail_log_alerts.yaml
dovecot-charm/src/prometheus_alert_rules/: mail_alerts.yaml
dovecot-charm/templates/: dovecot.conf.tmpl  procmailrc.tmpl  sync-to-secondary.service.tmpl  sync-to-secondary.sh.tmpl  sync-to-secondary.timer.tmpl  sync-to-secondary_cron.tmpl
dovecot-charm/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
dovecot-charm/terraform/tests/: main.tftest.hcl
dovecot-charm/tests/: conftest.py
dovecot-charm/tests/integration/: conftest.py  helpers.py  setup_lvm_pool.sh  test_action.py  test_config.py  test_gdpr.py  test_ha.py  test_mail.py  test_observability.py  test_storage.py  test_sync.py  test_tls.py  test_zzzobservability.py
dovecot-charm/tests/unit/: conftest.py  test_charm.py  test_config.py  test_ha.py  test_storage.py  test_tls.py  testing.py
opendkim-operator/terraform/: main.tf  outputs.tf  variables.tf
postfix-relay-configurator-operator/: requirements.txt
postfix-relay-configurator-operator/terraform/: main.tf  outputs.tf  variables.tf
postfix-relay-operator/: pyproject.toml  requirements.txt
postfix-relay-operator/src/: charm.py  postfix.py
postfix-relay-operator/templates/: inotify-config-change.sh.tmpl  postfix_main_cf.tmpl
postfix-relay-operator/terraform/: main.tf  (+2 more)
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform-product/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
(+49 files in other folders)
