# Copyright 2026 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "mailserver-monorepo"
version = "0.0.0"
description = "A group of related mail server charms."
readme = "README.md"
requires-python = ">=3.12"

[tool.bandit]
exclude_dirs = ["/venv/"]
[tool.bandit.assert_used]
skips = ["*/*test.py", "*/test_*.py", "*tests/*.py"]

# Testing tools configuration
[tool.coverage.run]
branch = true

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

[tool.coverage.report]
fail_under = 90
show_missing = true

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = [
    "tests/*:D100,D101,D102,D103,D104,D205,D212,D415",
    "dovecot-charm/tests/*:D100,D101,D102,D103,D104,D205,D212,D415",
]
docstring-convention = "google"

[tool.isort]
line_length = 99
profile = "black"
skip = ["dovecot-charm/lib"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    'dovecot_charm/tests.*',
    "tests.*",
]
disallow_untyped_defs = false

[tool.pylint]
disable = "wrong-import-order,duplicate-code"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
pythonpath = [
    "dovecot-charm/lib",
    "dovecot-charm/src",
]

# Linting tools configuration
[tool.ruff]
line-length = 99
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
ignore = ["E501", "D107"]
extend-exclude = ["__pycache__", "*.egg_info"]
per-file-ignores = { "tests/*, dovecot-charm/tests/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
] }

[tool.ruff.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[dependency-groups]
dev = [
    "cryptography==46.0.6",
    "jsonschema==4.26.0",
    "jubilant>=1.6.1",
    "juju>=3.6.1.3",
    "lightkube==0.19.1",
    "ops==3.6.0",
    "pydantic==2.12.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-operator>=0.31.0",
    "requests>=2.32.5",
    "rpds-py==0.30.0",
    "tox-uv>=1.33.4",
]
integration = [
    "allure-pytest>=2.8.18",
    "allure-pytest-collection-report @ git+https://github.com/canonical/data-platform-workflows@v24.0.0#subdirectory=python/pytest_plugins/allure_pytest_collection_report",
    "jubilant==1.7.0",
    "pytest",
    "pytest-asyncio",
    "pytest-operator",
]
